--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/scottgonzalez/debt/raw/master/LICENSE-MIT.txt"
   },
   "scripts": {
-    "test": "nodeunit tests/"
+    "test": "node tests/all.js"
   },
   "dependencies": {
     "mysql": "2.0.0-alpha9",
@@ -17,6 +17,7 @@
     "hbs": "2.4.0"
   },
   "devDependencies": {
-    "nodeunit": "0.8.2"
+    "nodeunit": "0.8.2",
+    "git-tools": "0.0.8"
   }
 }
