--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,7 @@ notifications:
   irc:
     channels:
       - "chat.freenode.net#debt"
+    template:
+      - "%{author} updated the %{branch} branch of %{repository}"
+      - "%{message} %{build_url}"
     skip_join: true
