--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "connect-oauth-github": "0.1.0",
     "connect-mysql": "0.4.0",
     "github-request": "1.1.0",
-    "marked": "0.3.0"
+    "marked": "0.3.0",
+    "moment": "2.5.0",
+    "handlebars": "1.3.0"
   },
   "devDependencies": {
     "nodeunit": "0.8.2",
