--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "github-request": "1.1.0",
     "marked": "0.3.0",
     "moment": "2.5.0",
-    "handlebars": "1.3.0"
+    "handlebars": "1.3.0",
+    "sanitizer": "0.1.1"
   },
   "devDependencies": {
     "nodeunit": "0.8.2",
