--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "marked": "0.3.0",
     "moment": "2.5.0",
     "handlebars": "1.3.0",
-    "sanitizer": "0.1.1"
+    "sanitizer": "0.1.1",
+    "gravatar": "1.0.6"
   },
   "devDependencies": {
     "nodeunit": "0.8.2",
