--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "gravatar": "1.0.6"
   },
   "devDependencies": {
+    "git-tools": "0.0.8",
     "nodeunit": "0.8.2",
-    "git-tools": "0.0.8"
+    "sane-email-validation": "1.0.0"
   }
 }
